[package]
name = "kv-object"
version = "0.1.0"
authors = ["xujian <s1473561555@sina.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.7.3", default-features = false }
serde = { version = "1.0", features = ["derive"] }
hex = { version = "0.4", default-features = false }
dislog-hal = { git = "https://github.com/Yinet-project/dislog-hal" }
dislog-hal-sm2 = { git = "https://github.com/Yinet-project/dislog-hal-sm2" }
asymmetric-crypto = { git ="https://github.com/Yinet-project/asymmetric-crypto" }

[dev-dependencies]
serde_json = "1.0"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["precommit-hook", "run-cargo-fmt", "run-cargo-test", "run-cargo-clippy"]